# rustyVulkan

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  shell.nix
crates/glfw/: Cargo.toml  build.rs
crates/glfw/src/: consts.rs  functions.rs  lib.rs  types.rs  wrapper.h
crates/shaders/: Cargo.toml
crates/shaders/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/vk-triangle/: Cargo.toml  build.rs
crates/vk-triangle/src/: main.rs  result.rs  shader.frag  shader.vert  vert.spv  vulkan_app.rs
crates/vulkan-wrapper/: Cargo.toml
