[workspace]
resolver = "2"

members = [
    "crates/vk-triangle",
    "crates/shaders",
]

[workspace.dependencies]
# Update to 0.71.1 is available, but causes clippy errors. See https://github.com/rust-lang/rust-bindgen/issues/3053
ash = { version = "0.38.0+1.3.281" }
glfw = { version = "0.59.0", features = ["wayland"] }
bon = "3.4.0"
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", rev = "05042d1713012862be103e85bfd2c15dfeccda7b" }
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", rev = "05042d1713012862be103e85bfd2c15dfeccda7b", default-features = false, features = ["use-installed-tools"] }

[profile.release]
lto = "fat"
codegen-units = 1

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3