[workspace]
resolver = "2"

members = [
    "crates/vk-triangle",
    "crates/shaders",
]

[workspace.dependencies]
ash = { version = "0.38.0+1.3.281" }
glfw = { version = "0.59.0", features = ["wayland"] }
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", rev = "175c175cd8a25722f284010fd9c7b70725449956" }
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", rev = "175c175cd8a25722f284010fd9c7b70725449956" }
glam = { version = "0.24.2" }

[profile.release]
lto = "fat"
codegen-units = 1

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
# Notably, this is needed for compiling the shaders with optimisations
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3