[workspace]
resolver = "2"

members = [
    "crates/vk-triangle",
    "crates/shaders",
    "crates/shared",
]

[workspace.dependencies]
ash = { version = "0.38.0+1.3.281" }
glfw = { version = "0.59.0", features = ["wayland"] }
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", rev = "6bbbfe460e45b7ca09b1a91fa6f6be7be2669bef" }
spirv-builder = { git = "https://github.com/rust-gpu/rust-gpu", rev = "6bbbfe460e45b7ca09b1a91fa6f6be7be2669bef" }
#spirv-std = { path = "../rust-gpu/crates/spirv-std" }
#spirv-builder = { path = "../rust-gpu/crates/spirv-builder" }
glam = { version = "0.30.2" }

shared = { path = "crates/shared" }

[profile.release]
lto = "fat"
codegen-units = 1

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
# Notably, this is needed for compiling the shaders with optimisations
[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3