[package]
name = "vk-triangle-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vk-triangle-rust"

[dependencies]
ash = { workspace = true, features = ["linked"] }
glfw = { workspace = true, features = ["vulkan"] }
bon = { workspace = true }

[build-dependencies]
spirv-builder = {workspace = true}

